--- a/static/templates/style.css
+++ b/static/templates/style.css
@@ -1,4 +1,14 @@
 /*--------------------------------------------------------------
+# general
+--------------------------------------------------------------*/
+.h1 {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+
+
+
+/*--------------------------------------------------------------
 # facts and figures
 --------------------------------------------------------------*/
 
@@ -91,4 +101,70 @@ section {
     margin-bottom: 0;
     font-style: italic;
     color: #666666;
+}
+
+
+/*--------------------------------------------------------------
+# F.A.Q
+--------------------------------------------------------------*/
+.faq {
+padding: 60px 0;
+}
+
+.faq .faq-list {
+padding: 0;
+list-style: none;
+}
+
+.faq .faq-list li {
+border-bottom: 1px solid #ececf1;
+margin-bottom: 20px;
+padding-bottom: 20px;
+}
+
+.faq .faq-list .question {
+display: block;
+position: relative;
+font-family: #023603;
+font-size: 18px;
+line-height: 24px;
+font-weight: 400;
+padding-left: 25px;
+cursor: pointer;
+color: #093b0d;
+transition: 0.3s;
+}
+
+.faq .faq-list i {
+font-size: 16px;
+position: absolute;
+left: 0;
+top: -2px;
+}
+
+.faq .faq-list p {
+margin-bottom: 0;
+padding: 10px 0 0 25px;
+}
+
+.faq .faq-list .icon-show {
+display: none;
+}
+
+.faq .faq-list .collapsed {
+color: black;
+}
+
+.faq .faq-list .collapsed:hover {
+color: #0c6216;
+}
+
+.faq .faq-list .collapsed .icon-show {
+display: inline-block;
+transition: 0.6s;
+}
+
+.faq .faq-list .collapsed .icon-close {
+display: none;
+transition: 0.6s;
 }
