--- a/static/templates/style.css
+++ b/static/templates/style.css
@@ -2,7 +2,7 @@
 # general
 --------------------------------------------------------------*/
 .h1 {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Trebuchet MS', sans-serif;
 }
 
 
