--- a/static/templates/style.css
+++ b/static/templates/style.css
@@ -5,6 +5,11 @@
     font-family: 'Trebuchet MS', sans-serif;
 }
 
+.top-image {
+    background-size: 100%;
+    height: 750px;
+    margin-bottom: 100px;
+}
 
 
 
@@ -64,22 +69,21 @@
 # Sections General
 --------------------------------------------------------------*/
 
-
-
 .section-bg {
     background-color: #17653012;
 }
 
 .section-title {
     text-align: center;
-    padding-bottom: 30px;
+    padding-bottom: 15px;
+    padding-top: 15px;
 }
 
 .section-title h2 {
     font-size: 32px;
     font-weight: 300;
-    margin-bottom: 20px;
-    padding-bottom: 15px;
+    margin-bottom: 10px;
+    padding-bottom: 10px;
     position: relative;
 }
 
@@ -160,5 +164,62 @@ transition: 0.6s;
 .faq .faq-list .collapsed .icon-close {
 display: none;
 transition: 0.6s;
+}
+
+/*-----------------------
+Wave effect
+-------------------------*/
+section {
+    position: relative;
+    width: 100%;
+    height: 90vh;
+    /* background: #228B22; */
+    background-size: 100% auto;
+}
+.waveTrans {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background: url(static\images\wave.png);
+    background-size: 1000px 100px;
+    animation: animate 4s ease-in-out infinite;
+    /* the below line takes the index of the waves to get them to move not at the same time */
+    animation-delay: calc(var(--i) * 0.25s); 
+}
+
+.waveTrans#waveTrans1{
+    z-index: 1000;
+    opacity: 1;
+    background-position-x:400px;
+}
+
+.waveTrans#waveTrans2{
+    z-index: 999;
+    opacity: 0.5;
+    background-position-x:300px;
+}
+
+.waveTrans#waveTrans3{
+    z-index: 998;
+    opacity: 0.2;
+    background-position-x:200px;
+}
+
+.waveTrans#waveTrans4{
+    z-index: 997;
+    opacity: 0.7;
+    background-position-x:100px;
+}
+
+
+@keyframes animate{
+    0%, 100% {
+        transform: translateY(0px)
+    }
+    50% {
+        transform: translateY(30px)
+    }
 }
 
