--- a/static/templates/style.css
+++ b/static/templates/style.css
@@ -6,9 +6,8 @@
 }
 
 .top-image {
-    background-size: 100%;
-    height: 750px;
-    margin-bottom: 100px;
+    background-size: cover;
+    margin-bottom: 80px;
 }
 
 
