--- a/templates/landing.css
+++ b/templates/landing.css
@@ -155,4 +155,14 @@ section {
     .container p {
         font-size: 1em;
     }
+
+    .navbar-nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navbar-nav .nav-item {
+        margin-bottom: 10px;
+        text-align: center;
+    }
 }
