--- a/templates/landing.css
+++ b/templates/landing.css
@@ -125,7 +125,7 @@ section {
     Responsive design
 -------------------------*/
 
-@media (max-width: 568px) {
+@media (max-width: 911px) {
     .title {
         font-size: 3em;
         margin-top: -30px;
@@ -165,4 +165,26 @@ section {
         margin-bottom: 10px;
         text-align: center;
     }
+
+    .navbar-collapse {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #f8f9fa;
+        z-index: 1;
+        display: none;
+    }
+    .navbar-collapse.show {
+        display: block;
+    }
+    .navbar-toggler {
+        z-index: 2;
+    }
+
+    body.navbar-open {
+        overflow: hidden; /* Prevent body scroll when navbar is open */
+    }
+
 }
