navbar mobile version

--- a/templates/landing.css
+++ b/templates/landing.css
@@ -131,6 +131,7 @@ section {
         margin-top: -30px;
     }
 
+
     .top-image {
         height: 50vh;
         margin-bottom: 20px;
@@ -139,8 +140,8 @@ section {
     .container {
         margin: 0 auto; /* Center the container */
         display: flex;
-        align-items: center; /* Center vertically */
-        flex-direction: column; /* Stack items vertically */
+        align-items: center; 
+        flex-direction: column;
     }
 
     .container img {
@@ -164,6 +165,15 @@ section {
     .navbar-nav .nav-item {
         margin-bottom: 10px;
         text-align: center;
+    }
+
+    .navbar-nav .nav-item .nav-link {
+        color: #000; 
+        transition: color 0.3s ease;
+    }
+
+    .navbar-nav .nav-item .nav-link:hover {
+        color: #2e7354; /* Text color on hover */
     }
 
     .navbar-collapse {
