--- a/templates/style.css
+++ b/templates/style.css
@@ -292,6 +292,14 @@ section {
         align-items: center;
     }
 
+    .navbar {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        z-index: 10;
+        }
+
     .navbar-nav {
         flex-direction: column;
         align-items: center;
@@ -300,6 +308,38 @@ section {
     .navbar-nav .nav-item {
         margin-bottom: 10px;
         text-align: center;
+    }
+
+    .navbar-nav .nav-item .nav-link {
+        color: #000; 
+        transition: color 0.3s ease;
+    }
+
+    .navbar-nav .nav-item .nav-link:hover {
+        color: #2e7354; /* Text color on hover */
+    }
+
+    .navbar-collapse {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: #f8f9fa;
+        z-index: 1;
+        display: none;
+    }
+
+    .navbar-collapse.show {
+        display: block;
+    }
+
+    .navbar-toggler {
+        z-index: 2;
+    }
+
+    body.navbar-open {
+        overflow: hidden; /* Prevent body scroll when navbar is open */
     }
 
     .top-image .container {
@@ -334,11 +374,11 @@ section {
         align-items: center;
     }
 
-    .d-block{
+    .d-block {
         align-items: center;
     }
 
-    .container{
+    .container {
         height: fit-content;
     }
 
@@ -346,8 +386,6 @@ section {
         width: 100%;
         height: auto;
     }
-
-   
 
     .carousel-inner img {
         width: 100%;
@@ -365,13 +403,13 @@ section {
         display: block;
     }
 
-
     .section-bg {
         background-color: #17653012;
         height: fit-content;
     }
 }
-@media (min-width: 871) and (max-width: 1000px) {
+
+@media (min-width: 871px) and (max-width: 1000px) {
     .featurette-image {
         width: 100%;
         height: auto;
