--- a/templates/style.css
+++ b/templates/style.css
@@ -310,15 +310,6 @@ section {
         text-align: center;
     }
 
-    .navbar-nav .nav-item .nav-link {
-        color: #000; 
-        transition: color 0.3s ease;
-    }
-
-    .navbar-nav .nav-item .nav-link:hover {
-        color: #2e7354; /* Text color on hover */
-    }
-
     .navbar-collapse {
         position: absolute;
         top: 0;
@@ -336,6 +327,7 @@ section {
 
     .navbar-toggler {
         z-index: 2;
+        border: none;
     }
 
     body.navbar-open {
